[package]
name = "helium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0"

pin-project-lite = "0.2"
futures = "0"
tokio = { version = "1", features = ["full"] }
async-stream = "0"
rand = "0"

anyhow = "1"
dotenvy = "0"

axum = { version = "0", features = ["ws", "headers", "tracing"] }
axum-extra = "0"
tower = { version = "0", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
