[package]
name = "ztopic"
version = "0.3.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT"
authors = ["Ethereal <zsl99a@live.com>"]
description = "A topic-based pub/sub library for Rust"
repository = "https://github.com/zsl99a/ztopic"

[dependencies]
anyhow = "1"
dotenvy = "0"

pin-project = "1"
parking_lot = "0"
jemallocator = "0"

futures = "0"
tokio = { version = "1", features = ["full"] }
async-stream = "0"

rand = "0"
dashmap = "5"
